<resources>
    <string name="app_name">12.10.17-ECommerceForAndroid</string>
    <string name="buy">Buy</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_admin_users">AdminUsersActivity</string>
    <string name="add">Add new User</string>
    <string name="delete_third_activity">Delete User</string>
    <string name="update_third_activity">Update User Information</string>
    <string name="title_activity_admin_products">AdminProductsActivity</string>
    <string name="add_product">Add new Product</string>
    <string name="delete_prod_item">Delete item</string>
    <string name="update_prod_item">Update Product</string>
    <string name="add_to_bucket_first_view">Add to bucket</string>
    <string name="et_name">Name</string>
    <string name="et_price">Price</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="phone_number">Phone number:</string>
    <string name="contact_email">Email:</string>
    <string name="contact_address">Address - Kyiv</string>
    <string name="title_activity_my_cabinet">MyCabinetActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="update">Update</string>
</resources>
