<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.volianskyi.taras.a121017_ecommerceforandroid.activitis.user_activities.ContactDetailsActivity">


    <TextView
        android:id="@+id/tvPhoneContactDetailsActivity"
        android:text="@string/phone_number"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvEmailContactDetailsActivity"
        android:text="@string/contact_email"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvAddressContactDetailsActivity"
        android:text="@string/contact_address"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
