<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.volianskyi.taras.a121017_ecommerceforandroid.activitis.admin.AdminUpdateProductsActivity">

    <TextView
        android:id="@+id/tvIDAdminUpdateProductsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNameAdminUpdateProductsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPriceAdminUpdateProductsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCategoryAdminUpdateProductsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etNameAdminUpdateProductsActivity"
        android:hint="@string/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPriceAdminUpdateProductsActivity"
        android:hint="@string/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerOfCatogiesAdminUpdateProductsActivity"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@android:color/holo_green_light"
        android:popupBackground="@drawable/blue"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btnUpdateAdminUpdateProductsActivity"
        android:text="@string/update_prod_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDeleteAdminUpdateProductsActivity"
        android:text="@string/delete_prod_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
